C51-377: fix z-index

--- a/scss/components/_activity-filter.scss
+++ b/scss/components/_activity-filter.scss
@@ -2,7 +2,7 @@
   background: $gray-light;
   padding: 16px 40px;
   width: 100%;
-  z-index: 4;
+  z-index: 11;
 }
 
 .civicase__activity-filter__settings {
